KnownProblem;
some homebrew not work fine
certain game,keybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position
0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting

2011/11/23
ポインタ幸子/MPS用ダンプパス出力に対応
□押しRAMDUMPでコピーアドレスのぱすになります

2011/11/09
コピーのオーバーフロー修正

2011/10/12
44_2chブラウザで落ちていたので修正

2011/10/1
コード編集時での□長押しでアドレス→ジャンプアドレス変換　が機能していたがちゃんとコンテキストのもじがでてなかったので修正。
JET(jal)＋電車(jr)GOだといらねえけど一応修正。

2011/9/9
浮動小数で0になるやつを多少工作

2011/9/3
パーサーの処理速度向上
いーす７で２～３秒ぐらい

2011/5/30
浮動小数の桁あふれを表示しないようにした(HUGEと表示される)

2011/5/23
コード整理機能、とりあえず名前の移動を実装
L+上で上に移動
L+下で下に移動
総コード数表示を追加
dectocheatの配列オーバーを修正

2011/5/20
マージ機能があるのみやつだけ追加
ダンプコードの改行をCRLFに変更
cwc形式ダンプの際拡張子をcmfに変更
pmeは追加フォルダに変更

2011/5/19
MKメニュー上ですくりーんしょっとを取れるように変更,VRAMもーど選択
exit関数誤爆でMGSでメニューが出づらくなっていたので修正
コード保存時の不要コード削除、3k削減

2011/5/18
コードのダンプ形式をNPR以外も追加(cwc/ar/pmetan/ar 0xe)
リセットコードを削除

2011/5/9
コード実行間隔の増減を半分にした
_LOGO_なしビルドに変更,DOUBLETAB表示がなくなります
型の一部を変更
ジャンプした場合ゲームIDがおかしくなっていたので修正

2011/5/4
2048だと使い過ぎのような気がしたので変更、そーすこーどに書いてあるので必要な分だけ足してください
名前512、最大行数1024
FREECHEATみたく最小100のやつも一応追加

2011/5/3
さーちしてないときのLRのはみだしがあったのを修正
CHEATHZを保存し忘れてたので追加
SWAPBUTTONを実行したときメニュー退出をできないように変更
サーチ時の□押しメニューがへんだったので修正
テキストサーチのコピーメニューが文字のところでも出てたので修正
SOCOMをソースから削除

2011/5/2
結果ジャンプが最大結果+1でもできたので修正
decoderでのCWCHEAT表示を廃止
リアルアドレス表示をチートメニューに全体に適用
びるどまーくに○Ｘ交換追加,コピーメニュなどの□＋○はきついので変えたとき△＋○
バイナリ設定ファイル追加,WW=ポーズ(ポーズ有りは01),XXブラウザライン(00,01),YYボタン交換(00,01),ZZリアルアドレス(00,01)
カラーのとこで□押しで保存可能
BINARY WWXXYYZZ

2011/4/28
スリープするとHOMEメニューのバッファが消されるので対策
スリープメニュー追加、一部ISOドライバー？は完全にスリープできないらしい

2011/4/27
GOでの温度計が機能しないらしいので修正(thanks,raing3)

2011/4/25
フリーズ対策のためHOME押した際スレッドを再開させるように変更
TXTサーチの文字バッファを記録しておくように変更
レジスタ表示をs8からfpにかえた

2011/4/23
テキストサーチ関連
大小無視(SEL+右)と1文字ワイルド(SEL+上,文字　.)を追加
文字指定分になってなかったので修正
カーソルのはみ出し修正
結果を残すように変更(他サーチへ引継ぎは不可)
コピー連動ジャンプ番号がずれてたので修正
LRの高速スクロール追加

2011/4/15