@@ -21,6 +21,11 @@ certain float,doesnot display (0.01,0.001)
 as for 8byte RAMeditor,strange copy position
 0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting
 
+2012/01/17
+mtloとmthiが間違っていたので修正
+http://code.google.com/p/pops-gte/wiki/DisasmHints
+でpsplink/prxtool自体のmsubとvi2uc.qがおかしいらしいので修正
+
 2011/11/23
 ポインタ幸子/MPS用ダンプパス出力に対応
 □押しRAMDUMPでコピーアドレスのぱすになります
